[文件上传] 完成了文件上传 和创建产品（未测试）的 API
